# cantus

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  generated-options.nix  justfile  rust-toolchain.toml  shell.nix  todo
.cargo/: config.toml
.zed/: settings.json
assets/: background.wgsl  cantus.spv  icons.wgsl  particles.wgsl  play.path  playhead.wgsl  star-half.path  star.path  text.wgsl
crates/cantus_cpu/: Cargo.toml  build.rs
crates/cantus_cpu/src/: art.rs  cache.rs  config.rs  generate_options.rs  interaction.rs  layer_shell.rs  lib.rs  main.rs  model.rs  pipelines.rs  render.rs  spotify.rs  spotify_debug.rs  status.rs  text_render.rs  weather.rs
crates/cantus_cpu/src/platform/: wayland.rs
crates/cantus_cpu/src/render/: art.rs  mod.rs  pipelines.rs  status.rs  text_render.rs  weather.rs
crates/cantus_gpu/: Cargo.toml
crates/cantus_gpu/src/: background.rs  build-shader.rs  common.rs  icons.rs  lib.rs  particles.rs  playhead.rs  status.rs  text.rs  track.rs  weather.rs
crates/cantus_shared/: Cargo.toml
crates/cantus_shared/src/: lib.rs
nix/: module.nix  package.nix
src/: background.rs  config.rs  image_manager.rs  interaction.rs  layer_shell.rs  main.rs  pipelines.rs  render.rs  render_types.rs  rspotify.rs  spotify.rs  spotify_debug.rs  text_render.rs  warp_background.wgsl  winit_app.rs
src/rspotify/: auth.rs  auth_code_pkce.rs  client.rs  custom_serde.rs  mod.rs  model.rs
src/rspotify/clients/: mod.rs
src/rspotify/http/: mod.rs
src/rspotify/model/: album.rs  artist.rs  auth.rs  category.rs  context.rs  custom_serde.rs  device.rs  error.rs  idtypes.rs  image.rs  mod.rs  page.rs  playing.rs  playlist.rs  recommend.rs  search.rs  show.rs  track.rs  user.rs
src/rspotify/model/enums/: misc.rs
