[package]
name = "cantus"
version = "0.3.0"
edition = "2024"

[features]
default = ["wayland"]
wayland = [
    "dep:wayland-backend",
    "dep:wayland-client",
    "dep:wayland-protocols",
    "dep:wayland-protocols-wlr",
]
winit = ["dep:winit"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"

ureq = "3.1.4"
pollster = "0.4.0"
raw-window-handle = "0.6.2"

wayland-backend = { version = "0.3.11", features = [
    "client_system",
], optional = true }
wayland-client = { version = "0.31.11", default-features = false, optional = true }
wayland-protocols = { version = "0.32", features = [
    "client",
    "staging",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
    "client",
], optional = true }

winit = { version = "0.30.12", default-features = false, features = [
    "rwh_06",
    "wayland",
    "x11",
], optional = true }

wgpu = { version = "26.0.1", default-features = false, features = [
    "parking_lot",
    "std",
    "vulkan",
] }
vello = { version = "0.6.0", default-features = false, features = ["wgpu"] }

ttf-parser = { version = "0.25.1", default-features = false, features = [
    "std",
    "variable-fonts",
] }

rspotify = { version = "0.15.3", default-features = false, features = [
    "client-ureq",
    "ureq-rustls-tls",
    "cli",
] }
chrono = { version = "0.4.42", default-features = false }
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
auto-palette = { version = "0.9.2", default-features = false }
palette = { version = "0.7.6", default-features = false, features = ["std"] }

fastrand = "2.3.0"
parking_lot = "0.12.5"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
itertools = "0.14.0"
dirs = "6.0.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too-many-lines = "allow"
cast-possible-truncation = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
suboptimal_flops = "allow"
cognitive_complexity = "allow"

separated_literal_suffix = "warn"
wildcard_enum_match_arm = "warn"
renamed_function_params = "warn"
str_to_string = "warn"
if_then_some_else_none = "warn"
redundant-type-annotations = "warn"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
