[workspace]
resolver = "3"
members = ["crates/cantus_cpu", "crates/cantus_gpu", "crates/cantus_shared"]
default-members = ["crates/cantus_cpu"]

[workspace.dependencies]
glam = { version = "=0.33.2", features = ["bytemuck"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
absolute-paths = "warn"
must_use_candidate = "allow"
too-many-lines = "allow"
too-many-arguments = "allow"
cast-possible-truncation = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cast-possible-wrap = "allow"
suboptimal_flops = "allow"

separated_literal_suffix = "warn"
renamed_function_params = "warn"
str_to_string = "warn"
if_then_some_else_none = "warn"
redundant-type-annotations = "warn"

[profile.release]
opt-level = 3
incremental = true
codegen-units = 256
lto = true
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
