[workspace]
resolver = "3"
members = ["crates/cantus_cpu", "crates/cantus_shared"]
default-members = ["crates/cantus_cpu"]
exclude = ["crates/cantus_gpu"]

[workspace.dependencies]
bytemuck = { version = "1.25.2", features = ["derive"] }
glam = { version = "=0.33.2", default-features = false, features = [
    "bytemuck",
    "libm",
    "u8",
] }
serde = { version = "1.0.229", features = ["derive"] }

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
too-many-lines = "allow"
too-many-arguments = "allow"
cast-possible-truncation = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cast-possible-wrap = "allow"
suboptimal_flops = "allow"

absolute-paths = "warn"
separated_literal_suffix = "warn"
renamed_function_params = "warn"
str_to_string = "warn"
if_then_some_else_none = "warn"
redundant-type-annotations = "warn"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
codegen-units = 256

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
