[package]
name = "cantus_cpu"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "cantus"
path = "src/main.rs"

[dependencies]
cantus_shared = { path = "../cantus_shared", features = ["cpu"] }
glam = { workspace = true }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "fmt",
    "smallvec",
    "tracing-log",
] }

pollster = "1.0.1"

wayland-client = { version = "0.31.14", default-features = false, features = ["system"] }
wayland-protocols = { version = "0.32.13", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }

wgpu = { version = "30.0.0", default-features = false, features = [
    "parking_lot",
    "spirv",
    "std",
    "vulkan",
] }
ab_glyph = { version = "0.2.32", default-features = false, features = ["std"] }

image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
] }
kmeans_colors = { version = "0.7.1", default-features = false, features = [
    "palette_color",
] }
palette = { version = "0.7.6", default-features = false, features = ["std"] }

serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
toml = "1.1.2"

fastrand = "2.4.1"
parking_lot = "0.12.5"
arrayvec = { version = "0.7.8", features = ["serde"] }
thiserror = "2.0.18"
base64 = "0.22.1"
form_urlencoded = "1.2.2"
sha2 = { version = "0.11.0", default-features = false }
bytemuck = { workspace = true }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[lints]
workspace = true
