[package]
name = "cantus_gpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "lib"]

[[bin]]
name = "build-shader"
required-features = ["build-shader"]

[dependencies]
cantus_shared = { path = "../cantus_shared", features = ["gpu"] }
naga = { version = "30.0.0", optional = true, features = ["spv-in"] }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "c1acf6e4b2d338b0f822457350ea91db21757f1a", optional = true }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "c1acf6e4b2d338b0f822457350ea91db21757f1a", features = [
    "glam_0_33",
] }

[features]
default = []
build-shader = ["dep:spirv-builder", "dep:naga"]

[lints]
workspace = true
