[package]
name = "cantus_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "bd49568baf08301107c9f698494735724980dee0", features = [
    "glam_0_33",
] }

[features]
default = []
cpu = ["bytemuck"]
gpu = []

[lints]
workspace = true
