[package]
name = "cantus_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { workspace = true }

[features]
default = []
cpu = ["bytemuck"]
gpu = []

[lints]
workspace = true
