[package]
name = "cantus_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true, optional = true }
glam = { workspace = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
cpu = ["bytemuck", "serde"]
gpu = []

[lints]
workspace = true
